# h5i-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: h5i.md  settings.json
.codex/: config.toml
.github/workflows/: release.yaml  test.yaml
blog/: reimplementing-40-multi-agent-papers-reddit.md  reimplementing-40-multi-agent-papers.md
examples/: README.md  arena_score.py  custom_control_flow.py  debate_then_build.py  ensemble_score.py  judge_panel_score.py  pipeline_score.py  quorum_ensemble.py  review_escalation.py  tournament.py
examples/papers/: README.md  agent_forest.py  agentcoder.py  agentless.py  agentverse.py  alphacodium.py  camel.py  chain_of_agents.py  chain_of_verification.py  chatdev.py  chateval.py  codet.py  constitutional_ai.py  critic.py  dylan.py  exchange_of_thought.py  graph_of_thoughts.py  lats.py  least_to_most.py  llm_blender.py  mad_divergent.py  mapcoder.py  mav_bon.py  meta_prompting.py  metagpt.py  mixture_of_agents.py  multiagent_debate.py  negotiation.py  parsel.py  persuasive_debate.py  prd_peer_rank.py  reconcile.py  reflexion.py  self_consistency.py  self_debugging.py  self_refine.py  selfcheckgpt.py  skeleton_of_thought.py  storm.py  tree_of_thoughts.py  (+1 more)
examples/tutorial/: arena_score.py  custom_control_flow.py  debate_then_build.py  ensemble_score.py  judge_panel_score.py  pipeline_score.py  quorum_ensemble.py  review_escalation.py  (+1 more)
tests/: conftest.py  mock_server.py  test_bridge.py  test_conductor.py  test_examples.py  test_herdr.py  test_integration.py  test_patterns.py  test_types.py  test_watch.py
(+9 files in other folders)
