[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h5i-orchestra"
version = "0.1.0"
description = "Python SDK for h5i orchestra — define-by-run agent orchestration journaled on the git-backed team event log"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Koukyosyumei" }]
keywords = ["agents", "orchestration", "h5i", "llm", "durable-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
# Deliberately zero runtime dependencies: the SDK is stdlib-only
# (asyncio + json + dataclasses) and all heavy lifting lives in the
# `h5i` binary it drives.
dependencies = []

[project.urls]
Homepage = "https://github.com/Koukyosyumei/h5i"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/h5i"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
